# bcs

./: .env.sample  .gitignore  README.md  docker-compose.yml  rebuild-and-start.sh
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260306_remove_unique_from_scripts_name.py  44f968607e8a_initial_migration_scripts_script_.py
backend/app/: main.py
backend/app/api/: deps.py  di.py
backend/app/api/routes/: executions.py  scripts.py  ws.py
backend/app/core/: config.py  database.py  dependencies.py  utils.py  websocket.py
backend/app/models/: execution.py  script.py
backend/app/schemas/: execution.py  script.py
backend/app/services/: __init__.py  execution_service.py  scheduler_service.py  script_service.py
backend/scripts/: check_disk_space.py  example_hello.py  monitor_resources.py  system_time_report.py  test_realtime_logs.py
frontend/: .env.sample  .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  executions.ts  scripts.ts
frontend/src/components/: CreateScriptDialog.tsx  CronEditor.tsx  ExecutionDialog.tsx  ImportScriptDialog.tsx  LogViewer.tsx  RelativeTime.tsx  ScriptCard.tsx  ScriptDetailsDialog.tsx  ScriptEditor.tsx  ScriptList.tsx  index.ts
frontend/src/hooks/: useExecutions.ts  useScriptUpdates.ts  useScripts.ts  useWebSocket.ts
frontend/src/types/: index.ts
